Arreglando nombre reportes y  resumen ventas en dash

--- a/InventarioPro/Client/Pages/Producto/ListProductos.razor
+++ b/InventarioPro/Client/Pages/Producto/ListProductos.razor
@@ -389,7 +389,7 @@
                 string pdf = "data:application/pdf;base64," + base64;
 
                 // Invocar función JavaScript para descargar el archivo PDF
-                jsruntime.InvokeVoidAsync("descargarPDF", pdf);
+                jsruntime.InvokeVoidAsync("descargarInventario", pdf);
             }
         }
     }
