Form y controllers para crear y listar empresa

--- a/InventarioPro/Client/Shared/MainLayout.razor
+++ b/InventarioPro/Client/Shared/MainLayout.razor
@@ -16,7 +16,7 @@
     </RadzenHeader>
 
     <RadzenSidebar @bind-Expanded="@leftSidebarExpanded"
-        Style="grid-area: rz-sidebar; height: 100vh; background-color:#002050; color:white;">
+                   Style="grid-area: rz-sidebar; height: 100vh; background-color:#002050; color:white;">
         <RadzenPanelMenu Style="background-color: transparent; color:white;">
             <RadzenPanelMenuItem Text="Home" Icon="home" Path="/" />
             <RadzenPanelMenuItem Text="Usuarios" Icon="account_box" Path="/Counter" />
@@ -25,8 +25,19 @@
             <RadzenPanelMenuItem Text="Suplidores" Icon="business" />
             <RadzenPanelMenuItem Text="Ventas" Icon="assignment" Path="/ListVentas" />
             <RadzenPanelMenuItem Text="Reportes" Icon="assessment" />
+
+            <!-- Configuración con submenús -->
+            <RadzenPanelMenuItem Icon="settings" Text="Configuración">
+                <RadzenPanelMenu>
+                    <RadzenPanelMenuItem Text="Usuarios" Icon="person" Path="/Usuarios" />
+                    <RadzenPanelMenuItem Text="Roles" Icon="assignment_ind" Path="/Roles" />
+                    <RadzenPanelMenuItem Text="Empresa" Icon="business" Path="/FormEmpresa" />
+                    <!-- Agrega otros submenús que desees -->
+                </RadzenPanelMenu>
+            </RadzenPanelMenuItem>
         </RadzenPanelMenu>
     </RadzenSidebar>
+
 
     <RadzenBody Style="grid-area: rz-body">
         @Body
